--- a/style.css
+++ b/style.css
@@ -89,6 +89,10 @@ section {
 button {
     border: none;
     cursor: pointer;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 /*HEADER*/
@@ -156,7 +160,11 @@ footer {
 }
 
 #about h2 {
-    margin-bottom: 0.4em;
+    margin: 0 0 0.4em 0;
+}
+
+#about p {
+    margin-bottom: 1em;
 }
 
 #about .w40 {
@@ -255,6 +263,7 @@ footer {
     padding: 5%;
     font-size: 1em;
 }
+
 
 .carousel-container article {
     padding: 4% 0;
@@ -460,7 +469,7 @@ footer ul {
     list-style: none;
     display: flex;
     justify-content: center;
-    padding: 0;
+    padding-top: 1em;
 }
 
 .svg-icon {
