--- a/style.css
+++ b/style.css
@@ -97,11 +97,10 @@ button {
 
 /*HEADER*/
 header {
-    padding: 0.4em 25px;
     background-image: url(img/slide.jpeg);
     text-shadow: 1px 1px black;
     background-size: cover;
-    height: 30vh;
+    height: 32vh;
 }
 
 header .row {
@@ -133,12 +132,15 @@ div#title {
 }
 
 div#title h1 {
-    font-size: 2.9em;
+    font-size: 6vh;
     line-height: 1em;
     margin: 0.6em 0 0.4em 0;
 }
 
 /*BANNER*/
+banner {
+    height: 10vh;
+}
 .banner,
 footer {
     background-color: #353535;
@@ -492,6 +494,14 @@ footer ul {
     div#title h1 {
         margin: 0.3em 0 0.2em 0;
     }
+
+    /* header {
+        height: 32vh;
+    }
+
+    #about {
+        height: 58vh;
+    } */
 
     #about img {
         width: 70%;
