--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ div#title {
     margin: 0.5em auto;
 }
 
-div#title h1 {
+header h1 {
     font-size: 6vh;
     line-height: 1em;
     margin: 0.6em 0 0.4em 0;
@@ -141,6 +141,7 @@ div#title h1 {
 banner {
     height: 10vh;
 }
+
 .banner,
 footer {
     background-color: #353535;
@@ -189,7 +190,7 @@ footer {
 }
 
 #estudis>div>div {
-    height: 60vh;
+    min-height: 60vh;
     align-items: center;
 }
 
@@ -435,7 +436,7 @@ input[type=email],
 textarea {
     border-width: 0 0 2px 0;
     border-color: #F79977;
-    font-size: 1em;
+    font-size: 0.8em;
     outline: none;
     padding: 1%;
     background-color: #00000000;
@@ -452,6 +453,7 @@ form div * {
 
 textarea {
     resize: none;
+    font-size: 1em;
 }
 
 .form-group {
@@ -491,17 +493,9 @@ footer ul {
         font-size: 1.1em;
     }
 
-    div#title h1 {
+    header h1 {
         margin: 0.3em 0 0.2em 0;
     }
-
-    /* header {
-        height: 32vh;
-    }
-
-    #about {
-        height: 58vh;
-    } */
 
     #about img {
         width: 70%;
@@ -524,16 +518,99 @@ footer ul {
         width: 60%;
     }
 
-    input[type=text],
-    input[type=email] {
-        font-size: 0.9em;
+    footer img {
+        width: 2.5vw;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    body {
+        font-size: 1em;
     }
 
-    textarea {
-        font-size: 1.2em;
+    header {
+        height: 25vh;
+    }
+
+    header nav ul li a {
+        padding: 0.5em;
+    }
+
+    header .w50 {
+        width: 100%;
+    }
+
+    header h1 {
+        font-size: 4vh;
+    }
+
+    div#title {
+        padding: 1.5em 0;
+    }
+
+    h2 {
+        font-size: 2em;
+    }
+
+    #about {
+        height: 67vh;
+    }
+
+    #about .w40 {
+        display: none;
+    }
+
+    #about .w60 {
+        width: 100%;
+    }
+
+    #estudis>div>div.row {
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+
+    #estudis .w60,
+    #estudis .w40 {
+        width: 100%;
+    }
+
+    #estudis h3 {
+        font-size: 1.5em;
+        margin-top: 1em;
+    }
+
+    #estudis .w60>p {
+        padding: 0;
+    }
+
+    #estudis .w33 {
+        width: 100%;
+    }
+
+    #skills-list ul {
+        justify-content: center;
+        margin: 0;
+    }
+
+    #skills-list h4 {
+        margin: 0.5em 0;
+    }
+
+    #projects .w50 {
+        width: 100%;
+    }
+
+    #contact .w40 {
+        width: 70%;
+    }
+
+    form input[type="submit"] {
+        padding: 1vh 1em;
+        font-size: 1.3em;
     }
 
     footer img {
-        width: 2.5vw;
+        width: 7vw;
+        padding: 0.5vw 2vw;
     }
 }
